[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fallout1-save-editor"
version = "1.3"
description = "f1se"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "f1se"}]

[project.scripts]
f1se = "f1se.main:main"

[tool.setuptools.packages.find]
where = ["src"]
